--- a/ide/vs2010/libnmath.vcxproj
+++ b/ide/vs2010/libnmath.vcxproj
@@ -39,9 +39,14 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <OutDir>$(ProjectDir)..\..\bin\</OutDir>
+    <ExtensionsToDeleteOnClean>$(ExtensionsToDeleteOnClean)</ExtensionsToDeleteOnClean>
+    <TargetName>$(ProjectName)d</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <OutDir>$(ProjectDir)..\..\bin\</OutDir>
+    <ExtensionsToDeleteOnClean>$(ExtensionsToDeleteOnClean)</ExtensionsToDeleteOnClean>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -58,7 +63,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
-      <WarningLevel>Level4</WarningLevel>
+      <WarningLevel>Level3</WarningLevel>
       <PrecompiledHeader>
       </PrecompiledHeader>
       <Optimization>MaxSpeed</Optimization>
@@ -74,51 +79,48 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\aabb.cc" />
-    <ClCompile Include="..\src\geometry.cc" />
-    <ClCompile Include="..\src\intinfo.cc" />
-    <ClCompile Include="..\src\matrix.cc" />
-    <ClCompile Include="..\src\mesh.cc" />
-    <ClCompile Include="..\src\plane.cc" />
-    <ClCompile Include="..\src\ray.cc" />
-    <ClCompile Include="..\src\sphere.cc" />
-    <ClCompile Include="..\src\triangle.cc" />
-    <ClCompile Include="..\src\vector.cc" />
+    <ClCompile Include="..\..\src\aabb.cc" />
+    <ClCompile Include="..\..\src\geometry.cc" />
+    <ClCompile Include="..\..\src\intinfo.cc" />
+    <ClCompile Include="..\..\src\matrix.cc" />
+    <ClCompile Include="..\..\src\plane.cc" />
+    <ClCompile Include="..\..\src\ray.cc" />
+    <ClCompile Include="..\..\src\sphere.cc" />
+    <ClCompile Include="..\..\src\triangle.cc" />
+    <ClCompile Include="..\..\src\vector.cc" />
     <ClCompile Include="dllmain.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\src\aabb.h" />
-    <ClInclude Include="..\src\declspec.h" />
-    <ClInclude Include="..\src\defs.h" />
-    <ClInclude Include="..\src\geometry.h" />
-    <ClInclude Include="..\src\interpolation.h" />
-    <ClInclude Include="..\src\intinfo.h" />
-    <ClInclude Include="..\src\matrix.h" />
-    <ClInclude Include="..\src\mesh.h" />
-    <ClInclude Include="..\src\mutil.h" />
-    <ClInclude Include="..\src\plane.h" />
-    <ClInclude Include="..\src\precision.h" />
-    <ClInclude Include="..\src\prime.h" />
-    <ClInclude Include="..\src\prng.h" />
-    <ClInclude Include="..\src\ray.h" />
-    <ClInclude Include="..\src\sphere.h" />
-    <ClInclude Include="..\src\triangle.h" />
-    <ClInclude Include="..\src\types.h" />
-    <ClInclude Include="..\src\vector.h" />
-    <ClInclude Include="..\src\vertex.h" />
+    <ClInclude Include="..\..\src\aabb.h" />
+    <ClInclude Include="..\..\src\declspec.h" />
+    <ClInclude Include="..\..\src\defs.h" />
+    <ClInclude Include="..\..\src\geometry.h" />
+    <ClInclude Include="..\..\src\interpolation.h" />
+    <ClInclude Include="..\..\src\intinfo.h" />
+    <ClInclude Include="..\..\src\matrix.h" />
+    <ClInclude Include="..\..\src\mutil.h" />
+    <ClInclude Include="..\..\src\plane.h" />
+    <ClInclude Include="..\..\src\precision.h" />
+    <ClInclude Include="..\..\src\prime.h" />
+    <ClInclude Include="..\..\src\prng.h" />
+    <ClInclude Include="..\..\src\ray.h" />
+    <ClInclude Include="..\..\src\sphere.h" />
+    <ClInclude Include="..\..\src\triangle.h" />
+    <ClInclude Include="..\..\src\types.h" />
+    <ClInclude Include="..\..\src\vector.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\src\aabb.inl" />
-    <None Include="..\src\interpolation.inl" />
-    <None Include="..\src\matrix.inl" />
-    <None Include="..\src\mutil.inl" />
-    <None Include="..\src\plane.inl" />
-    <None Include="..\src\prime.inl" />
-    <None Include="..\src\prng.inl" />
-    <None Include="..\src\ray.inl" />
-    <None Include="..\src\sphere.inl" />
-    <None Include="..\src\triangle.inl" />
-    <None Include="..\src\vector.inl" />
+    <None Include="..\..\src\aabb.inl" />
+    <None Include="..\..\src\interpolation.inl" />
+    <None Include="..\..\src\matrix.inl" />
+    <None Include="..\..\src\mutil.inl" />
+    <None Include="..\..\src\plane.inl" />
+    <None Include="..\..\src\prime.inl" />
+    <None Include="..\..\src\prng.inl" />
+    <None Include="..\..\src\ray.inl" />
+    <None Include="..\..\src\sphere.inl" />
+    <None Include="..\..\src\triangle.inl" />
+    <None Include="..\..\src\vector.inl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
