--- a/ide/vs2010/libnmath.vcxproj.filters
+++ b/ide/vs2010/libnmath.vcxproj.filters
@@ -15,34 +15,31 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\aabb.cc">
+    <ClCompile Include="..\..\src\aabb.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\geometry.cc">
+    <ClCompile Include="..\..\src\geometry.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\intinfo.cc">
+    <ClCompile Include="..\..\src\intinfo.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\matrix.cc">
+    <ClCompile Include="..\..\src\matrix.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\mesh.cc">
+    <ClCompile Include="..\..\src\plane.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\plane.cc">
+    <ClCompile Include="..\..\src\ray.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\ray.cc">
+    <ClCompile Include="..\..\src\sphere.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\sphere.cc">
+    <ClCompile Include="..\..\src\triangle.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\triangle.cc">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\vector.cc">
+    <ClCompile Include="..\..\src\vector.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="dllmain.cpp">
@@ -50,96 +47,90 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\src\aabb.h">
+    <ClInclude Include="..\..\src\aabb.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\defs.h">
+    <ClInclude Include="..\..\src\defs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\geometry.h">
+    <ClInclude Include="..\..\src\geometry.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\interpolation.h">
+    <ClInclude Include="..\..\src\interpolation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\intinfo.h">
+    <ClInclude Include="..\..\src\intinfo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\matrix.h">
+    <ClInclude Include="..\..\src\matrix.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\mesh.h">
+    <ClInclude Include="..\..\src\mutil.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\mutil.h">
+    <ClInclude Include="..\..\src\plane.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\plane.h">
+    <ClInclude Include="..\..\src\precision.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\precision.h">
+    <ClInclude Include="..\..\src\prime.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\prime.h">
+    <ClInclude Include="..\..\src\prng.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\prng.h">
+    <ClInclude Include="..\..\src\ray.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\ray.h">
+    <ClInclude Include="..\..\src\sphere.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\sphere.h">
+    <ClInclude Include="..\..\src\triangle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\triangle.h">
+    <ClInclude Include="..\..\src\types.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\types.h">
+    <ClInclude Include="..\..\src\vector.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\vector.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\vertex.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\declspec.h">
+    <ClInclude Include="..\..\src\declspec.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\src\aabb.inl">
+    <None Include="..\..\src\aabb.inl">
       <Filter>Header Files</Filter>
     </None>
-    <None Include="..\src\interpolation.inl">
+    <None Include="..\..\src\interpolation.inl">
       <Filter>Header Files</Filter>
     </None>
-    <None Include="..\src\matrix.inl">
+    <None Include="..\..\src\matrix.inl">
       <Filter>Header Files</Filter>
     </None>
-    <None Include="..\src\mutil.inl">
+    <None Include="..\..\src\mutil.inl">
       <Filter>Header Files</Filter>
     </None>
-    <None Include="..\src\plane.inl">
+    <None Include="..\..\src\plane.inl">
       <Filter>Header Files</Filter>
     </None>
-    <None Include="..\src\prime.inl">
+    <None Include="..\..\src\prime.inl">
       <Filter>Header Files</Filter>
     </None>
-    <None Include="..\src\prng.inl">
+    <None Include="..\..\src\prng.inl">
       <Filter>Header Files</Filter>
     </None>
-    <None Include="..\src\ray.inl">
+    <None Include="..\..\src\ray.inl">
       <Filter>Header Files</Filter>
     </None>
-    <None Include="..\src\sphere.inl">
+    <None Include="..\..\src\sphere.inl">
       <Filter>Header Files</Filter>
     </None>
-    <None Include="..\src\triangle.inl">
+    <None Include="..\..\src\triangle.inl">
       <Filter>Header Files</Filter>
     </None>
-    <None Include="..\src\vector.inl">
+    <None Include="..\..\src\vector.inl">
       <Filter>Header Files</Filter>
     </None>
   </ItemGroup>
