--- a/ide/vs2010/libnmath.vcxproj
+++ b/ide/vs2010/libnmath.vcxproj
@@ -10,6 +10,52 @@
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\src\aabb.cc" />
+    <ClCompile Include="..\..\src\dllmain.c" />
+    <ClCompile Include="..\..\src\geometry.cc" />
+    <ClCompile Include="..\..\src\intinfo.cc" />
+    <ClCompile Include="..\..\src\matrix.cc" />
+    <ClCompile Include="..\..\src\plane.cc" />
+    <ClCompile Include="..\..\src\ray.cc" />
+    <ClCompile Include="..\..\src\sphere.cc" />
+    <ClCompile Include="..\..\src\triangle.cc" />
+    <ClCompile Include="..\..\src\vector.cc" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\src\aabb.h" />
+    <ClInclude Include="..\..\src\declspec.h" />
+    <ClInclude Include="..\..\src\defs.h" />
+    <ClInclude Include="..\..\src\geometry.h" />
+    <ClInclude Include="..\..\src\interpolation.h" />
+    <ClInclude Include="..\..\src\intinfo.h" />
+    <ClInclude Include="..\..\src\matrix.h" />
+    <ClInclude Include="..\..\src\mutil.h" />
+    <ClInclude Include="..\..\src\plane.h" />
+    <ClInclude Include="..\..\src\precision.h" />
+    <ClInclude Include="..\..\src\prime.h" />
+    <ClInclude Include="..\..\src\prng.h" />
+    <ClInclude Include="..\..\src\ray.h" />
+    <ClInclude Include="..\..\src\sample.h" />
+    <ClInclude Include="..\..\src\sphere.h" />
+    <ClInclude Include="..\..\src\triangle.h" />
+    <ClInclude Include="..\..\src\types.h" />
+    <ClInclude Include="..\..\src\vector.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\src\aabb.inl" />
+    <None Include="..\..\src\interpolation.inl" />
+    <None Include="..\..\src\matrix.inl" />
+    <None Include="..\..\src\mutil.inl" />
+    <None Include="..\..\src\plane.inl" />
+    <None Include="..\..\src\prime.inl" />
+    <None Include="..\..\src\prng.inl" />
+    <None Include="..\..\src\ray.inl" />
+    <None Include="..\..\src\sample.inl" />
+    <None Include="..\..\src\sphere.inl" />
+    <None Include="..\..\src\triangle.inl" />
+    <None Include="..\..\src\vector.inl" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{16A804CC-2EC0-41B3-9DBC-231EFB3C2DF7}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
@@ -78,50 +124,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="..\..\src\aabb.cc" />
-    <ClCompile Include="..\..\src\geometry.cc" />
-    <ClCompile Include="..\..\src\intinfo.cc" />
-    <ClCompile Include="..\..\src\matrix.cc" />
-    <ClCompile Include="..\..\src\plane.cc" />
-    <ClCompile Include="..\..\src\ray.cc" />
-    <ClCompile Include="..\..\src\sphere.cc" />
-    <ClCompile Include="..\..\src\triangle.cc" />
-    <ClCompile Include="..\..\src\vector.cc" />
-    <ClCompile Include="dllmain.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\..\src\aabb.h" />
-    <ClInclude Include="..\..\src\declspec.h" />
-    <ClInclude Include="..\..\src\defs.h" />
-    <ClInclude Include="..\..\src\geometry.h" />
-    <ClInclude Include="..\..\src\interpolation.h" />
-    <ClInclude Include="..\..\src\intinfo.h" />
-    <ClInclude Include="..\..\src\matrix.h" />
-    <ClInclude Include="..\..\src\mutil.h" />
-    <ClInclude Include="..\..\src\plane.h" />
-    <ClInclude Include="..\..\src\precision.h" />
-    <ClInclude Include="..\..\src\prime.h" />
-    <ClInclude Include="..\..\src\prng.h" />
-    <ClInclude Include="..\..\src\ray.h" />
-    <ClInclude Include="..\..\src\sphere.h" />
-    <ClInclude Include="..\..\src\triangle.h" />
-    <ClInclude Include="..\..\src\types.h" />
-    <ClInclude Include="..\..\src\vector.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="..\..\src\aabb.inl" />
-    <None Include="..\..\src\interpolation.inl" />
-    <None Include="..\..\src\matrix.inl" />
-    <None Include="..\..\src\mutil.inl" />
-    <None Include="..\..\src\plane.inl" />
-    <None Include="..\..\src\prime.inl" />
-    <None Include="..\..\src\prng.inl" />
-    <None Include="..\..\src\ray.inl" />
-    <None Include="..\..\src\sphere.inl" />
-    <None Include="..\..\src\triangle.inl" />
-    <None Include="..\..\src\vector.inl" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
